Fix Dark mode again..

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -118,8 +118,8 @@
     {
         background-color: #111;
     }
-    .page-link
+    .site-nav .page-link
     {
-        background-color: #aaa;
+        color: #aaa;
     }
 }
